--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: lbento <lbento@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/07/15 18:22:14 by lbento            #+#    #+#              #
-#    Updated: 2025/12/10 16:08:59 by lbento           ###   ########.fr        #
+#    Updated: 2025/12/11 17:33:30 by lbento           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -52,7 +52,8 @@ SRCS = ft_isalpha.c \
 	ft_putnbr_fd.c \
 	ft_split.c \
 	get_next_line.c \
-	get_next_line_bonus.c
+	get_next_line_bonus.c \
+	garbage_colector.c
 
 OBJS = $(SRCS:.c=.o)
 
